--- a/web-proyect/index.html
+++ b/web-proyect/index.html
@@ -12,42 +12,35 @@
 </head>
 <body>
     <div class="principal">
- 
             <div class="contenedor">
-                <h1>Titulo 1</h1>
+                <h1>Calculadora Basica</h1>
                 <img src="./assets/error-404.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nobis id earum neque voluptate consequuntur nisi debitis architecto iste, ducimus saepe deserunt. Fugit enim animi est minima aspernatur molestias commodi.</p>
-                <a href="#" class="boton">Click aqui</a>
+                <p>Calculadora escrita a base de JavaScript, realiza operaciones basicas como la suma, resta, multiplicacion, division.</p>
+                <a href="./sub-programar/Calculadora/index.html" class="boton">Click aqui</a>
             </div>
             <div class="contenedor">
-                <h1>Titulo 2</h1>
+                <h1>Generador de Tablas</h1>
                 <img src="./assets/error-404.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nobis id earum neque voluptate consequuntur nisi debitis architecto iste, ducimus saepe deserunt. Fugit enim animi est minima aspernatur molestias commodi.</p>
-                <a href="#" class="boton">Click aqui</a>
+                <p>Aca podras generar tablas de multiplicar del 1 al 18</p>
+                <a href="./sub-programar/tablas/index.html" class="boton">Click aqui</a>
             </div>
             <div class="contenedor">
-                <h1>Titulo 3</h1>
+                <h1>Mokepon</h1>
                 <img src="./assets/error-404.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nobis id earum neque voluptate consequuntur nisi debitis architecto iste, ducimus saepe deserunt. Fugit enim animi est minima aspernatur molestias commodi.</p>
-                <a href="#" class="boton">Click aqui</a>
+                <p>Un simple juego a base de JavaScript.</p>
+                <a href="./sub-programar/Piedra-papel-tijera/piedra-papel-tijera.html" class="boton">Click aqui</a>
             </div>
             <div class="contenedor">
-                <h1>Titulo 1</h1>
+                <h1>Invitacion de cumpleaños</h1>
                 <img src="./assets/error-404.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nobis id earum neque voluptate consequuntur nisi debitis architecto iste, ducimus saepe deserunt. Fugit enim animi est minima aspernatur molestias commodi.</p>
-                <a href="#" class="boton">Click aqui</a>
+                <p>Invitacion para un cumpleaños a base de CSS - basica.</p>
+                <a href="./sub-programar/Invitacion-prueba-1/index.html" class="boton">Click aqui</a>
             </div>
             <div class="contenedor">
-                <h1>Titulo 2</h1>
+                <h1>Piedra-papel-tijera</h1>
                 <img src="./assets/error-404.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nobis id earum neque voluptate consequuntur nisi debitis architecto iste, ducimus saepe deserunt. Fugit enim animi est minima aspernatur molestias commodi.</p>
-                <a href="#" class="boton">Click aqui</a>
-            </div>
-            <div class="contenedor">
-                <h1>Titulo 3</h1>
-                <img src="./assets/error-404.png" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure nobis id earum neque voluptate consequuntur nisi debitis architecto iste, ducimus saepe deserunt. Fugit enim animi est minima aspernatur molestias commodi.</p>
-                <a href="#" class="boton">Click aqui</a>
+                <p>Sin descripcion.</p>
+                <a href="./sub-programar/juego/juego.html" class="boton">Click aqui</a>
             </div>
     </div>
 </body>
