--- a/web-proyect/index.html
+++ b/web-proyect/index.html
@@ -42,6 +42,12 @@
                 <p>Sin descripcion.</p>
                 <a href="./sub-programar/juego/juego.html" class="boton">Click aqui</a>
             </div>
+            <div class="contenedor">
+                <h1>Login</h1>
+                <img src="./assets/error-404.png" alt="">
+                <p>Sin descripcion.</p>
+                <a href="./sub-programar/login/index.html" class="boton">Click aqui</a>
+            </div>
     </div>
 </body>
 </html>
