--- a/web-proyect/index.html
+++ b/web-proyect/index.html
@@ -48,6 +48,12 @@
                 <p>Sin descripcion.</p>
                 <a href="./sub-programar/login/index.html" class="boton">Click aqui</a>
             </div>
+            <div class="contenedor">
+                <h1>Calculadora 2</h1>
+                <img src="./assets/error-404.png" alt="">
+                <p>Sin descripcion.</p>
+                <a href="./sub-programar/calculador/index.html" class="boton">Click aqui</a>
+            </div>
     </div>
 </body>
 </html>
